<?xml version="1.0"?>
<package format="2">
  <name>benchmark</name>
  <version>0.1.0</version>
  <description>Google Benchmark Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Unknown</license>

  <build_depend>gtest</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
