<?xml version="1.0"?>
<package format="2">
  <name>ompl</name>
  <version>0.1.0</version>
  <description>ompl Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <depend>boost</depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
