<?xml version="1.0"?>
<package format="2">
  <name>swig</name>
  <version>4.0.0</version>
  <description>The SWIG Catkin Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Unknown</license>

  <depend>automake</depend>
  <depend>pcre</depend>
  <depend>bison</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
